<resources>
    <string name="app_name">FragA</string>
    <string name="testString">Nothing</string>
    <string name="tapButton">submit</string>
    <string name="stations">Stations</string>
    <string name="spinnerText">element</string>
    <string name="spinnerContentDescription">Content</string>
    <string name="lon">lon</string>
    <string name="lan">lan</string>
    <string name="areaclass">AreaClass</string>
    <string name="areaClassContentDescription">ContentAreaClass</string>
    <string name="lanInput">write lan</string>
    <string name="lonInput">write lon</string>
    <string name="defaultText">example name variable</string>
    <string name="defaultContextText">example of context in variable</string>

</resources>