<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/tapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="284dp"
        android:text="@string/tapButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <Spinner
        android:id="@+id/stationSpinner"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"

        android:contentDescription="@string/spinnerContentDescription"
        android:text="@string/spinnerText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/StationTextView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/stations"
        app:layout_constraintBottom_toTopOf="@+id/stationSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/latInputLayout"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lanInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:hint="@string/lanInput" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/latTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="21dp"
        android:text="@string/lan"
        app:layout_constraintBottom_toTopOf="@+id/latInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="132dp"
        android:text="@string/lon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lonTextInput"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lonTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lonInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:hint="@string/lonInput" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/areaclassSpinner"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/areaClassContentDescription"
        app:layout_constraintBottom_toTopOf="@+id/tapButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stationSpinner"
        app:layout_constraintVertical_bias="0.254" />

    <TextView
        android:id="@+id/areaclassText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/areaclass"
        app:layout_constraintBottom_toTopOf="@+id/areaclassSpinner"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>